3.0.18.0 (open)
* Create MessagingService mocking classes (CASSANDRA-12016)
* Restore resumable hints delivery, backport CASSANDRA-11960 (CASSANDRA-14419)
* Fix potential IndexOutOfBoundsException with counters (CASSANDRA-14167)
* Fix reading columns with non-UTF names from schema (CASSANDRA-14468)

3.0.17.15
* <rdar://problem/49484414> (CASSANDRA-15072) Incomplete range results during 2.X -> 3.11.4 upgrade
* <rdar://problem/49120367> (CASSANDRA-15059) Gossiper#markAlive can race with Gossiper#markDead
* (no radar) PR #1249 drop root capabilities before running tests and reenable FQL tests
* <rdar://problem/48670257> (CASSANDRA-15045) Fix index summary redistribution compaction cancellation issues
* <rdar://problem/49900065> (CASSANDRA-15089) CassandraNetworkAuthorizer::authorize should get role details from Roles, not directly from IRoleManager
* <rdar://problem/49938329> (CASSANDRA-15086) Illegal column names make legacy sstables unreadable in 3.0/3.x
* <rdar://problem/44970349> (CASSANDRA-14802) CalculatePendingRanges assigns more pending ranges than necessary
* <rdar://problem/49271378> (Apple Internal) Skip FullQueryLogger tests that fail when running as root
* <rdar://problem/49755710> (Apple Internal) Add rio docker image release when we release cie-cassandra every time
* <rdar://problem/47113811> (CASSANDRA-14993) Catch CorruptSSTableExceptions and FSErrors in ALAExecutorService

3.0.17.14
* <rdar://problem/48394821> Backport CASSANDRA-15036: Avoid ConcurrentModificationException when cancelling compactions

3.0.17.13
* <rdar://problem/48113316> CASSANDRA-15024: Don't try to cancel 2i compactions when starting anticompaction
* <rdar://problem/48113314> CASSANDRA-15025: Avoid NPE in RepairRunnable.recordFailure
* <rdar://problem/48072203> (Apple Internal) Bump log level for Prepare phase for incremental repair session {} completed again
* <rdar://problem/48156138> CASSANDRA-15027: Fix IR prepare anti-compaction race

3.0.17.12