@@ -84,7 +84,11 @@ public class FloatType extends AbstractType<Float>
     @Override
     public String toJSONString(ByteBuffer buffer, int protocolVersion)
     {
-        return getSerializer().deserialize(buffer).toString();
+        Float value = getSerializer().deserialize(buffer);
+        // JSON does not support NaN, Infinity and -Infinity values. Most of the parser convert them into null.
+        if (value.isNaN() || value.isInfinite())
+            return "null";
+        return value.toString();
     }
 
     public CQL3Type asCQL3Type()
